[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-battery-estimator"
version = "0.1.0"
description = "Estimate remaining UAV flight time under current load and wind using a simple empirical model."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon Himpfen" }
]
keywords = ["uav", "drone", "battery", "flight-time", "telemetry", "estimator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities"
]

dependencies = [
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "build>=1.2.1",
  "twine>=5.1.1"
]

[project.scripts]
uav-battery = "battery_life_estimator:main"

[project.urls]
Homepage = "https://github.com/brandonhimpfen/battery-life-estimator"
Repository = "https://github.com/brandonhimpfen/battery-life-estimator"
Issues = "https://github.com/brandonhimpfen/battery-life-estimator/issues"

[tool.setuptools]
py-modules = ["battery_life_estimator"]
